About 페이지 작성 및 Contact 페이지 작성 2

--- a/about/index.html
+++ b/about/index.html
@@ -1,4 +1,4 @@
-<a href="/test/about">about</a>
-<a href="/test/contact">contact</a>
+<a href="/11.04/about">about</a>
+<a href="/11.04/contact">contact</a>
 
 <h1>About</h1>
